# codebase

./: .gitignore  BUILD.gn  CMakeLists.txt  README.md  cmake-setup.sh  hello_world.cc
base/: BUILD.gn  base_exports.h  closure.h  closure_tests.cc  command_line.cc  command_line.h  command_line_tests.cc  cxx.h  function.h  log.cc  log.h  log_tests.cc  logging.cc  logging.h  macro.h  priority_queue.h  priority_queue_tests.cc  source_location.cc  source_location.h  source_location_tests.cc  string_aux.cc  string_aux.h  string_aux_tests.cc  string_helper.cc  string_helper.h  time_tests.cc  timestamp.cc  timestamp.h  timestamp_tests.cc  utility.h  utility_tests.cc
base/algorithm/: comparator.h  find.h  find_tests.cc  hash.cc  hash.h  hash_tests.cc  heap.h  heap_tests.cc  linked_symbol_table.h  symbol_table.h  symbol_table_tests.cc  tree.h  tree_tests.cc
base/allocator/: allocator.h  allocator_traits.h  simple_allocator.h
base/concurrent/: auto_lock.cc  auto_lock.h  blocking_queue.cc  blocking_queue.h  blocking_queue_tests.cc  condition_variable.cc  condition_variable.h  condition_variable_tests.cc  count_down_latch.cc  count_down_latch.h  count_down_latch_tests.cc  countdown_latch.cc  countdown_latch.h  monitor.cc  monitor.h  monitor_tests.cc  mutex.cc  mutex.h  mutex_guard.cc  mutex_guard.h  mutex_tests.cc  platform_thread_linux.cc  platform_thread_linux.h  platform_thread_linux_tests.cc  platform_thread_macos.cc  platform_thread_macos.h  promise.cc  promise.h  restrict_mutex.cc  restrict_mutex.h  semaphore.cc  semaphore.h  spin_lock.cc  spin_lock.h  spin_lock_tests.cc  task.h  task_executor.h  task_executor_impl.cc  task_executor_impl.h  task_executor_tests.cc  (+13 more)
base/concurrent/lock/: adaptive_lock.cc  adaptive_lock.h  adaptive_lock_tests.cc
base/container/: __vector.h  __vector_tests.cc  array.h  array_tests.cc  vector.h  vector_tests.cc
base/container/internal/: iterator.h  iterator_traits.h  pointer_iterator.h  tree.cc  tree.h  vector_base.h
base/file/: directory.cc  directory.h  file.cc  file.h  path.cc  path.h  path_tests.cc
base/ipc/: name.cc  name.h
base/memory/: atomic_reference_counting.cc  atomic_reference_counting.h  lifetime.h  memory_pool.cc  memory_pool.h  reference.h  reference_counting.cc  reference_counting.h  reference_counting_tests.cc  shared_ptr_tests.cc  smart_ptr.cc  smart_ptr.h
base/memory/internal/: shared_ptr.cc  shared_ptr.h  shared_ptr_impl.h
base/platform/: platform.cc  platform.h  platform_process.cc  platform_process.h  platform_tests.cc
base/string/: string_view.cc  string_view.h
base/task/: task.h
buildconfig/: BUILD.gn  BUILDCONFIG.gn
buildconfig/c/: c.gni
buildconfig/c++/: c++.gni
buildconfig/platform/: platform.gni
buildconfig/toolchain/: toolchain.gni
buildconfig/toolchain/linux/: BUILD.gn
buildconfig/toolchain/macos/: BUILD.gn
experiment/: BUILD.gn  CMakeLists.txt  algo_exp.cc  atomic.cc  atomic_exp.cc  closure_exp.cc  ebo.cc  enable_if_exp.cc  epoll_server.cc  hash_exp.cc  helper.h  mmap_exp.cc  pipe_exp.cc  posix_mq_exp.cc  process_exp.cc  rb_tree.cc  read.cc  reference_counting_exp.cc  sem_exp.cc  shared_memory_exp.cc  simple_cipher.cc  store_load_reordering_exp.cc  store_load_reordering_preshing.cc  store_store_reordering_exp.cc  task_executor.cc  tcp_client.cc  tcp_server.cc  thread_counting.cc  thread_experiments.cc  thread_local.cc  thread_printing.cc  time_exp.cc  type_erase_exp.cc  type_list.cc  var_exp.cc  weak_observer.cc
experiment/file_system/: fcntl_exp.cc  ls.cc  record_lock.cc
experiment/io/: bio.cc
experiment/ipc/: fifo.cc  pipe.cc  posix_mq.cc  posix_sem.cc  posix_shm.cc  sysv_mq.cc  sysv_mq_client.cc  sysv_mq_server.cc  sysv_sem.cc  sysv_shm.cc  unix_socket.cc  unix_socket_client.cc  unix_socket_multiplex_server.cc  unix_socket_server.cc
experiment/net/: connection.h  inet4_address.cc  inet4_address.h  inet4_endpoint.cc  inet6_address.cc  inet6_address.h  net.h  socket.h  socket_exp.cc
net/: address.cc  address.h  ip.cc  ip.h  port.cc  port.h  socket.cc  socket.h
testing/: BUILD.gn
