source_set("base_sources") {
  include_dirs = [ "//" ]

  sources = [
    "command_line.cc",
    "command_line.h",
    "concurrent/blocking_queue.cc",
    "concurrent/blocking_queue.h",
    "concurrent/condition_variable.cc",
    "concurrent/condition_variable.h",
    "concurrent/countdown_latch.cc",
    "concurrent/countdown_latch.h",
    "concurrent/monitor.cc",
    "concurrent/monitor.h",
    "concurrent/mutex.cc",
    "concurrent/mutex.h",
    "concurrent/mutex_guard.cc",
    "concurrent/mutex_guard.h",
    "concurrent/promise.cc",
    "concurrent/promise.h",
    "concurrent/restrict_mutex.cc",
    "concurrent/restrict_mutex.h",
    "concurrent/semaphore.cc",
    "concurrent/semaphore.h",
    "concurrent/thread.cc",
    "concurrent/thread.h",
    "concurrent/thread_group.cc",
    "concurrent/thread_group.h",
    "concurrent/thread_pool.cc",
    "concurrent/thread_pool.h",
    "file/directory.cc",
    "file/directory.h",
    "file/file.cc",
    "file/file.h",
    "file/path.cc",
    "file/path.h",
    "log.cc",
    "log.h",
    "string_aux.cc",
    "string_aux.h",
  ]
}

executable("mutex_tests") {
  include_dirs = [ "//" ]

  sources = [ "concurrent/mutex_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("closure_tests") {
  include_dirs = [ "//" ]

  sources = [ "closure_tests.cc" ]
}

executable("thread_tests") {
  include_dirs = [ "//" ]

  sources = [ "./concurrent/thread_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("monitor_tests") {
  include_dirs = [ "//" ]

  sources = [ "./concurrent/monitor_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("condition_variable_tests") {
  include_dirs = [ "//" ]

  sources = [ "./concurrent/condition_variable_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("command_line_tests") {
  include_dirs = [ "//" ]

  sources = [ "./command_line_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("string_aux_tests") {
  include_dirs = [ "//" ]

  sources = [ "./string_aux_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("time_tests") {
  include_dirs = [ "//" ]

  sources = [ "./time_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("blocking_queue_tests") {
  include_dirs = [ "//" ]

  sources = [ "./concurrent/blocking_queue_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("priority_queue_tests") {
  include_dirs = [ "//" ]

  sources = [ "./priority_queue_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

group("base_tests") {
  deps = [
    ":blocking_queue_tests",
    ":closure_tests",
    ":command_line_tests",
    ":condition_variable_tests",
    ":monitor_tests",
    ":mutex_tests",
    ":priority_queue_tests",
    ":string_aux_tests",
    ":thread_tests",
  ]
}
