source_set("base_sources") {
  configs = [ "//buildconfig:global" ]

  sources = [
    "algorithm/hash.cc",
    "algorithm/hash.h",
    "algorithm/linked_symbol_table.h",
    "algorithm/symbol_table.h",
    "command_line.cc",
    "command_line.h",
    "concurrent/blocking_queue.cc",
    "concurrent/blocking_queue.h",
    "concurrent/condition_variable.cc",
    "concurrent/condition_variable.h",
    "concurrent/count_down_latch.cc",
    "concurrent/count_down_latch.h",
    "concurrent/monitor.cc",
    "concurrent/monitor.h",
    "concurrent/mutex.cc",
    "concurrent/mutex.h",
    "concurrent/mutex_guard.cc",
    "concurrent/mutex_guard.h",
    "concurrent/platform_thread_linux.cc",
    "concurrent/platform_thread_linux.h",
    "concurrent/promise.cc",
    "concurrent/promise.h",
    "concurrent/restrict_mutex.cc",
    "concurrent/restrict_mutex.h",
    "concurrent/semaphore.cc",
    "concurrent/semaphore.h",
    "concurrent/spin_lock.cc",
    "concurrent/spin_lock.h",
    "concurrent/thread.cc",
    "concurrent/thread.h",
    "concurrent/thread_group.cc",
    "concurrent/thread_group.h",
    "concurrent/thread_pool.cc",
    "concurrent/thread_pool.h",
    "file/directory.cc",
    "file/directory.h",
    "file/file.cc",
    "file/file.h",
    "file/path.cc",
    "file/path.h",
    "log.cc",
    "log.h",
    "string_aux.cc",
    "string_aux.h",
    "timestamp.cc",
    "timestamp.h",
  ]
}

executable("mutex_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "concurrent/mutex_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("closure_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "closure_tests.cc" ]

  deps = [
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("thread_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./concurrent/thread_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("monitor_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./concurrent/monitor_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("condition_variable_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./concurrent/condition_variable_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("command_line_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./command_line_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("string_aux_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./string_aux_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("time_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./time_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("blocking_queue_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./concurrent/blocking_queue_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("priority_queue_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./priority_queue_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("hash_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./algorithm/hash_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("heap_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./algorithm/heap_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("log_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./log_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("find_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./algorithm/find_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("timestamp_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./timestamp_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("symbol_table_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./algorithm/symbol_table_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("vector_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./container/vector_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]

  cflags = [
    "-fsanitize=address",
    "-fno-access-control",
  ]

  ldflags = [ "-fsanitize=address" ]
}

executable("array_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./container/array_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("spin_lock_tests") {
  configs = [ "//buildconfig:global" ]

  sources = [ "./concurrent/spin_lock_tests.cc" ]

  deps = [
    ":base_sources",
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

group("base_tests") {
  deps = [
    ":blocking_queue_tests",
    ":closure_tests",
    ":command_line_tests",
    ":condition_variable_tests",
    ":monitor_tests",
    ":mutex_tests",
    ":priority_queue_tests",
    ":string_aux_tests",
    ":thread_tests",
  ]
}
