group("experiments") {}

executable("tcp_client") {
  include_dirs = [ "//" ]
  sources = [ "tcp_client.cc" ]

  deps = [ "//base:base_sources" ]
}

executable("tcp_server") {
  include_dirs = [ "//" ]
  sources = [ "tcp_server.cc" ]

  deps = [ "//base:base_sources" ]
}

executable("weak_observer") {
  include_dirs = [ "//" ]
  sources = [ "weak_observer.cc" ]
}

executable("thread_expriments") {
  include_dirs = [ "//" ]
  sources = [ "thread_experiments.cc" ]
}

executable("read") {
  include_dirs = [ "//" ]
  sources = [ "read.cc" ]

  deps = [ "//base:base_sources" ]
}

executable("epoll_server") {
  include_dirs = [ "//" ]
  sources = [ "epoll_server.cc" ]

  deps = [ "//base:base_sources" ]
}

executable("rb_tree") {
  include_dirs = [ "//" ]
  sources = [ "rb_tree.cc" ]

  deps = [ "//base:base_sources" ]
}

executable("simple_cipher") {
  include_dirs = [ "//" ]
  sources = [ "simple_cipher.cc" ]

  deps = [ "//base:base_sources" ]
}
executable("mmap") {
  include_dirs = [ "//" ]
  sources = [ "mmap.cc" ]

  deps = [ "//base:base_sources" ]
}