group("all_experiments") {
  deps = [ ":task_executor" ]
}

executable("task_executor") {
  sources = [ "task_executor.cc" ]

  deps = [
    "//testing:gtest",
    "//testing:gtest_main",
  ]
}

executable("time_exp") {
  sources = [ "time_exp.cc" ]

  deps = [
    "//base:base_sources",
    "//testing:gtest",
  ]
}

# executable("tcp_client") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "tcp_client.cc" ]

#   deps = [ "//base:base_sources" ]
# }

# executable("tcp_server") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "tcp_server.cc" ]

#   deps = [ "//base:base_sources" ]
# }

# executable("weak_observer") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "weak_observer.cc" ]
# }

# executable("thread_expriments") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "thread_experiments.cc" ]
# }

# executable("read") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "read.cc" ]

#   deps = [ "//base:base_sources" ]
# }

# executable("epoll_server") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "epoll_server.cc" ]

#   deps = [ "//base:base_sources" ]
# }

# executable("rb_tree") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "rb_tree.cc" ]

#   deps = [ "//base:base_sources" ]
# }

# executable("simple_cipher") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "simple_cipher.cc" ]

#   deps = [ "//base:base_sources" ]
# }

# executable("mmap") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "mmap_exp.cc" ]

#   deps = [ "//base:base_sources" ]
# }

# executable("atomic") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "atomic_exp.cc" ]

#   deps = [
#     "//base:base_sources",
#     "//testing:gtest",
#     "//testing:gtest_main",
#   ]
# }

# executable("thread_counting") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "thread_counting.cc" ]

#   deps = [
#     "//base:base_sources",
#     "//testing:gtest",
#     "//testing:gtest_main",
#   ]
# }

# executable("thread_printing") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "thread_printing.cc" ]

#   deps = [
#     "//base:base_sources",
#     "//testing:gtest",
#     "//testing:gtest_main",
#   ]
# }

# executable("ebo") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "ebo.cc" ]

#   deps = [
#     "//base:base_sources",
#     "//testing:gtest",
#     "//testing:gtest_main",
#   ]
# }

# executable("thread_local") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "thread_local.cc" ]

#   deps = [
#     "//base:base_sources",
#     "//testing:gtest",
#     "//testing:gtest_main",
#   ]
# }

# executable("type_list") {
#   configs = [ "//buildconfig:global" ]

#   sources = [ "type_list.cc" ]

#   deps = [
#     "//testing:gtest",
#     "//testing:gtest_main",
#   ]
# }
