config("gtest_config") {
  include_dirs = [
    "//testing/googletest",
    "//testing/googletest/include",
  ]
}

config("gmock_config") {
  include_dirs = [
    "//testing/googlemock",
    "//testing/googlemock/include",
  ]
}

static_library("gtest") {
  public_configs = [
    ":gtest_config",
    "//buildconfig:global",
  ]

  sources = [ "//testing/googletest/src/gtest-all.cc" ]
}

static_library("gtest_main") {
  public_configs = [
    ":gtest_config",
    "//buildconfig:global",
  ]

  deps = [ ":gtest" ]

  sources = [ "//testing/googletest/src/gtest_main.cc" ]
}

static_library("gmock") {
  public_configs = [
    ":gmock_config",
    ":gtest_config",
    "//buildconfig:global",
  ]

  sources = [ "//testing/googlemock/src/gmock-all.cc" ]
}

static_library("gock_main") {
  public_configs = [
    ":gmock_config",
    ":gtest_config",
    "//buildconfig:global",
  ]

  deps = [
    ":gmock",
    ":gtest",
  ]

  sources = [ "//testing/googlemock/src/gmock_main.cc" ]
}
