declare_args() {
  # C++ language standard version.
  std_cxx = "c++20"

  # use run-time type information.
  # RTTI is considered expensive.
  use_rtti = false

  # use C++ exceptions.
  # exceptions are not well disigned in C++.
  # Usually, many projects choose to disable C++ exceptions.
  use_exceptions = false

  # extra c++ compiler flags.
  extra_cflags_cc = []

  # extra c++ defines.
  extra_defines_cc = []

  # static linking to c++ standard library.
  use_static_libstdcxx = false
}
