import("//buildconfig/c++/c++.gni")
import("//buildconfig/c/c.gni")
import("//buildconfig/platform/platform.gni")

declare_args() {
  compiler_c = "gcc"
  compiler_cxx = "g++"
  linker = "ld"
  archiver = "ar"
  assembler = "asm"
  copyer = "cp"
  timestamper = "touch"

  warning_level = 3  # max: 3
  treat_warnings_as_errors = true

  # 0 ~ 3 are treated as O0 ~ O3 respectively.
  optimization_level = 0

  use_asan = false
  use_tsan = false
  use_ubsan = false

  # This will make all symbols hidden unless they are explicitly exported.
  use_explicit_symbol_exports = true

  # extra flags.
  extra_ldflags = []

  enable_debug_info = true

  # If it is true, all executables are static executables.
  use_static_linking = false
}
